--- a/.gitignore
+++ b/.gitignore
@@ -1,13 +1,8 @@
 .htaccess
-wp-config.php
-wp-content/uploads/
-wp-content/blogs.dir/
-wp-content/upgrade/
-wp-content/backup-db/
-wp-content/advanced-cache.php
-wp-content/wp-cache-config.php
-sitemap.xml
+files/
+files/gimgs/
+files/dimgs/
+ndxzsite/config/config.php
+ndxzsite/cache/
 *.log
-wp-content/cache/
-wp-content/backups/
-sitemap.xml.gz
+.DS_Store
